--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
-Django==1.11.28
-django-material==1.0.0
-geopy==1.11.0
-googlemaps==2.5.0
-psycopg2==2.7.1
-astroid==2.4.2
-click==7.1.2
-colorama==0.4.4
-Flask==1.1.2
 gunicorn==20.0.4
-isort==5.6.4
+APScheduler==3.6.3
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+comtypes==1.1.8
+cryptography==3.4.5
+Flask==1.1.2
+googlemaps==4.4.2
+idna==2.10
 itsdangerous==1.1.0
-Jinja2==2.11.3
-lazy-object-proxy==1.4.3
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-mccabe==0.6.1
-pylint==2.6.0
+pycparser==2.20
+pypiwin32==223
+python-telegram-bot==13.2
+pyttsx3==2.90
+pytz==2021.1
+pywin32==300
+requests==2.25.1
 six==1.15.0
-toml==0.10.2
+tornado==6.1
+tzlocal==2.1
+urllib3==1.26.3
 Werkzeug==1.0.1
-wrapt==1.12.1
+
